# swagger/openapi.yaml
@@ -522,6 +522,15 @@ components:
           type: string
           format: date-time
           readOnly: true
+        approved:
+          type: string
+          format: date-time
+          readOnly: true
+        approvedBy:
+          type: integer
+          format: int64
+          readOnly: true
+          example: 42
     appointmentDTO:
       properties:
         appointment:
